@@ -13,6 +13,7 @@ test_requires 'Test::More' => '0.98';
 test_requires 'Test::Pod'  => '1.45';
 test_requires 'Test::MockTime';
 test_requires 'Test::Exception';
+test_requires 'Test::Output';
 test_requires 'CGI::Simple';
 test_requires 'base';
 
