@@ -1,5 +1,13 @@
 Revision history for Perl extension CGI::Header.
 
+  - finalize() prints to STDOUT using CGI#print
+
+  [ROADMAP]
+
+    CGI::Header::Standalone will be separated into CGI::Header::Apache1
+    and Apache2. For example, CGI::Header::Apache2 inherits from
+    CGI::Header::Adapter which is a base class for adapters.
+
 0.55 (1.00-RC8) May 22nd, 2013
 
   - Add CGI::Header::Standalone again as the alternative to CGI::Header
